--- a/index.html
+++ b/index.html
@@ -1,27 +1,166 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mc Burger</title>
+    <title> Burger | Afesu </title>
 
-<!-- Vue Js -->
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- Vue JS -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 
-<!-- Bootstrap -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
 
 </head>
+
 <body>
+
     <nav class="navbar navbar-dark bg-dark">
         <div class="container justify-content-center">
             <span class="navbar-brand mb-0 h1">
-                <!-- margin bottom -->
-                 Monte o seu lanche. 
-
+                <!-- margin-bottom -->
+                Monte o seu Lanche.
             </span>
-        </div>        
+        </div>
     </nav>
 
+    <div class="container">
+
+        <div id="app">
+
+            <div class="row">
+
+                <!-- Imagens do Burger -->
+                <div class="col-md-6">
+                    <div class="row mt-2">
+
+                        <div class="col">
+                            <!-- Propriedade Computada -->
+                            <img src="" alt="">
+
+                            <img :src="pao[0]">
+                            <img :src="alface">
+                            <img :src="ketchup">
+                            <img :src="mostarda">
+                            <img :src="maionese">
+                            <img :src="burger">
+                            <img :src="pao[1]">
+
+                        </div> <!-- col -->
+                    </div>
+                </div>
+
+                <!-- Seleção de produtos -->
+                <div class="col-md-6" v-if="etapa == 1">
+
+                    <!-- TIPO do Pão -->
+                    <div class="row mt-2">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    Tipo de Pão
+                                </div>
+                            </div>
+                            <div class="card-body">
+
+                                <div class="form-check form-check-inline">
+
+                                    <input type="radio" class="form-check-input" value="gergelim" v-model="inputTipoPao">
+                                    <label class="form-check-label"> Gergelim </label>
+
+                                </div>
+                                 <!-- pao australiano -->
+                                <div class="form-check form-check-inline">
+
+                                    <input type="radio" class="form-check-input" value="australiano" v-model="inputTipoPao">
+                                    <label class="form-check-label"> Australiano </label>
+
+                                </div>
+
+
+
+                            </div>
+                        </div>
+                    </div> <!-- fim tipo pao  -->
+
+                    <!-- SALADA -->
+                     <div class="row mt-2">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    Salada
+                                </div>
+
+                                <div class="card-body">
+
+                                    <div class="form-check">
+
+                                        <input type="checkbox" class="form-check-input" value="alface" v-model=""> 
+
+                                        <label class="form-check-label"> Alface </label>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                     </div>
+
+
+
+
+
+
+                </div>
+
+            </div> <!-- Fim ROW -->
+
+        </div>
+        <!--  Fim APP -->
+
+    </div>
+
+
+    <!-- instancia VUE -->
+    <script>
+        //const = constante
+        // vm = view (html) Model (js)
+        const vm = new Vue({
+            el: '#app',
+            /* atributos */
+            data: {
+                inputTipoPao: '',
+
+                etapa: 1,
+
+            },
+         /* imagens dos ingredientes */
+            computed: {
+                pao () {
+                    switch (this.inputTipoPao) {
+                        case 'gergelim':
+                            return[ 'imagens/pao_gergelim_superior.png', 'imagens/pao_gergelim_inferior.png']
+                        case 'australiano': 
+                            return [ 'imagens/pao_australiano_superior.png', 'imagens/pao_australiano_inferior.png' ]
+                        default: 
+                            return ['imagens/padrao/pao_superior.png', 'imagens/padrao/pao_inferior.png']
+                        
+                    }
+                }
+
+            },
+
+
+        })
+
+    </script>
+
+
 </body>
+
 </html>
